--- a/index.html
+++ b/index.html
@@ -37,6 +37,19 @@
   </footer>
 
   <script src="script.js"></script>
+
+  <!-- Add the Adsense script here -->
+  <div class="adsense-tile tile"></div>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1062594333558612" crossorigin="anonymous"></script>
+  <script>
+    (adsbygoogle = window.adsbygoogle || []).push({
+       google_ad_client: "ca-pub-1062594333558612",
+       enable_page_level_ads: true,
+       tag: 'YOUR_ADSENSE_AD_UNIT_CODE',
+       element: document.querySelector('.adsense-tile')
+     });
+  </script>
+
 </body>
 
 </html>
